--- a/devOps/vagrant/Vagrantfile
+++ b/devOps/vagrant/Vagrantfile
@@ -57,8 +57,8 @@ Vagrant.configure("2") do |config|
   #   vb.memory = "1024"
   # end
     config.vm.provider "virtualbox" do |vb|
-        vb.memory = "3000"
-        vb.name= "jack-centos7"
+        vb.memory = "2048"
+        vb.name= "Centos7-bigdatas00"
         vb.cpus= 2
     end
   #
